--- a/.gitignore
+++ b/.gitignore
@@ -178,7 +178,7 @@ cython_debug/
 
 
 # Abstra
-# Abstra is an AI-powered process automation framework.
+# Abstra is a AI-powered process automation framework.
 # Ignore directories containing user credentials, local state, and settings.
 # Learn more at https://abstra.io/docs
 .abstra/
@@ -197,7 +197,7 @@ cython_debug/
 .pypirc
 
 # Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
+#  Cursor is a AI-powered code editor. `.cursorignore` specifies files/directories to
 #  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
 #  refer to https://docs.cursor.com/context/ignore-files
 .cursorignore
